--- a/excel_inport.ipynb
+++ b/excel_inport.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "35e5bb56-ebf4-4cf2-8259-d1e5dddb0383",
+   "execution_count": 1,
+   "id": "ede3cb2f-2470-49db-bbb9-a2734d2341d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,24 +13,24 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "595bc166-acb0-43a8-b552-6a230b63841a",
+   "id": "05eaca1c-8e92-4323-b701-f1954937b7c9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Timestamp (UTC)\n",
-       "2024-10-30T13:00:00Z    1.27\n",
-       "2024-10-30T13:15:00Z    1.27\n",
-       "2024-10-30T13:30:00Z    1.27\n",
-       "2024-10-30T13:45:00Z    1.27\n",
-       "2024-10-30T14:00:00Z    1.27\n",
+       "2024-10-14T12:30:00Z    0.76\n",
+       "2024-10-14T12:45:00Z    0.76\n",
+       "2024-10-14T13:00:00Z    0.76\n",
+       "2024-10-14T13:15:00Z    0.76\n",
+       "2024-10-14T13:30:00Z    0.76\n",
        "                        ... \n",
-       "2024-11-04T11:30:00Z    0.93\n",
-       "2024-11-04T11:45:00Z    0.93\n",
-       "2024-11-04T12:00:00Z    0.92\n",
-       "2024-11-04T12:15:00Z    0.93\n",
-       "2024-11-04T12:30:00Z    0.93\n",
+       "2024-10-19T11:00:00Z    1.22\n",
+       "2024-10-19T11:15:00Z    1.22\n",
+       "2024-10-19T11:30:00Z    1.22\n",
+       "2024-10-19T11:45:00Z    1.22\n",
+       "2024-10-19T12:00:00Z    1.22\n",
        "Name: Height (m), Length: 479, dtype: float64"
       ]
      },
@@ -40,29 +40,23 @@
     }
    ],
    "source": [
-    "#url to obtain csv file for recent water levels\n",
-    "url = \"https://check-for-flooding.service.gov.uk/station-csv/5178\"\n",
-    "\n",
-    "#import csv file using data on time and height\n",
-    "derwent = pd.read_csv(url,\n",
-    "                     usecols=['Timestamp (UTC)','Height (m)'],\n",
+    "derwent = pd.read_excel('Water_levels.xlsx',\n",
+    "                       usecols=['Timestamp (UTC)','Height (m)'],\n",
     "                      index_col='Timestamp (UTC)').squeeze()\n",
     "\n",
-    "\n",
-    "#print data fom csv \n",
     "derwent"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "6b59b2df-3922-49ce-be82-1818c1520e21",
+   "id": "bf2b2251-0232-4844-9e67-729554c93129",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.27"
+       "1.22"
       ]
      },
      "execution_count": 23,
@@ -71,7 +65,6 @@
     }
    ],
    "source": [
-    "#obtain heighest water level\n",
     "high = derwent.idxmax()\n",
     "derwent[high]"
    ]
@@ -79,13 +72,13 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "5dcd92b8-2307-4ff6-8dfe-3f3f31c5263d",
+   "id": "4ddf2679-3460-455e-ac34-a15dc986b7d8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.92"
+       "0.76"
       ]
      },
      "execution_count": 25,
@@ -94,33 +87,17 @@
     }
    ],
    "source": [
-    "#obtain lowest water level\n",
     "low = derwent.idxmin()\n",
     "derwent[low]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "da8305bc-25d3-4826-882b-e2f814459a41",
+   "execution_count": null,
+   "id": "c7506cff-1fc0-4ad0-b3b8-7a1ae10f85c1",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.0778"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#obtain average water level\n",
-    "mean = derwent.mean().round(4)\n",
-    "mean"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
